--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ selenium==4.27.1
 python-dotenv==1.0.1
 fastapi[standard]==0.115.0
 webdriver-manager==4.0.2
+pyjwt==2.9.0
+starlette==0.38.6
+newrelic==10.2.0
